kubernetes/applications/audiobookshelf/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: audiobookshelf
  namespace: apps
spec:
  selector:
    matchLabels:
      app: audiobookshelf
  strategy:
    type: Recreate
  revisionHistoryLimit: 3
  template:
    metadata:
      labels:
        app: audiobookshelf
    spec:
      containers:
        - name: audiobookshelf
          image: ghcr.io/advplyr/audiobookshelf:2.37.1@sha256:581d68b2a6fc7ebf58d81c878a9f387cbbc0d88ac9d37b298b9cee10168af85b
          volumeMounts:
            - name: data
              mountPath: /config
              subPath: config
            - name: data
              mountPath: /metadata
              subPath: metadata
            - name: audiobooks
              mountPath: /audiobooks
            - name: podcasts
              mountPath: /podcasts
            - name: books
              mountPath: /books
          resources:
            requests:
              cpu: 20m
              memory: 96Mi
            limits:
              cpu: 200m
              memory: 256Mi
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: audiobookshelf
        - name: audiobooks
          nfs:
            server: 192.168.0.123
            path: /mnt/mediadisk/audiobooks
        - name: podcasts
          nfs:
            server: 192.168.0.123
            path: /mnt/mediadisk/podcasts
        - name: books
          nfs:
            server: 192.168.0.123
            path: /mnt/mediadisk/books
