kubernetes/applications/audiobookshelf/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: audiobookshelf
  namespace: apps
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: audiobookshelf
